--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -20,12 +20,12 @@ html {
 body {
 	margin: 0;
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-	font-size: 1rem;
+	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5;
-	color: #212529;
+	/* color: #212529; */
 	text-align: left;
-	background-color: #fff;
+	/* background-color: #fff; */
 }
 
 .container {
@@ -72,13 +72,13 @@ b, strong {
 }
 
 a {
-	color: #007bff;
+	/* color: #007bff; */
 	text-decoration: none;
 	background-color: transparent;
 }
 
 a:hover {
-	color: #0056b3;
+	/* color: #0056b3; */
 	text-decoration: underline;
 }
 
@@ -300,7 +300,7 @@ code {
 	border-color: #f8f9fa;
 }
 
-/* INPUTS ================================================================= */
+/* INPUTS ================================================================= *
 button, input, optgroup, select, textarea {
 	margin: 0;
 	font-family: inherit;
