--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -350,6 +350,12 @@ button:not(:disabled) {
 	border-radius: .25rem;
 }
 
+.alert-info {
+	color: #0c5460;
+	background-color: #d1ecf1;
+	border-color: #bee5eb;
+}
+
 .alert-success {
 	color: #155724;
 	background-color: #d4edda;
