Fixed padding for tags 'h4'

--- a/public/styles/zonemap.css
+++ b/public/styles/zonemap.css
@@ -67,7 +67,7 @@ h4, .h4 {
 	/* color: rgb(30, 30, 28); */
 	text-transform: uppercase;
 	text-align: left;
-	padding: 0 0 8px 0;
+	padding: 8px 0 8px 0;
 }
 
 /* p {
