Added 'text-info' in font Futura Std

--- a/public/css/zonemap.css
+++ b/public/css/zonemap.css
@@ -60,8 +60,19 @@ h3, .h3 {
 
 h4, .h4 {
 	font-family: 'Futura Std Heavy';
-	font-size: 0.8em;
+	font-size: .8em;
 	text-transform: uppercase;
 	text-align: left;
 	padding: 8px 0 0 0;
+}
+
+.text-info {
+	font-family: 'Futura Std Medium';
+	font-size: .825rem;
+	line-height: 1.10;
+}
+
+.text-info b,
+.text-info strong {
+	font-family: 'Futura Std Heavy'!important;
 }
